--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Компьютерный клуб GameOver</title>
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-    <h1>Привет, мир!</h1>
+    <header class="header">
+        <div class="container header__inner">
+            <div class="mobile-nav">
+                <span></span>
+            </div>
+
+            <a href="index.html">
+                <img class="logo" src="blocks/header/img/logo.svg" alt="Логотип нашего компьютерного клуба">
+            </a>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link" href="#">Залы</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">О нас</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Бронь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Отзывы</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <button class="header__callback">Заказать звонок</button>
+        </div>
+    </header>
 </body>
 </html>
