--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
             <button class="header__callback">Заказать звонок</button>
         </div>
     </header>
+
+    <main class="main">
+        <section class="content">
+            <div class="container poster">
+                <h1 class="poster__title">Game Over</h1>
+                <p class="poster__subtitle">Новый формат игр и отдыха</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
