Полностью готов Poster

--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
             <div class="container poster">
                 <h1 class="poster__title">Game Over</h1>
                 <p class="poster__subtitle">Новый формат игр и отдыха</p>
+
+                <div class="poster__info">
+                    <div class="poster__info-element">
+                        <p class="poster__info-features poster__info-features_field_number">4</p>
+                        <p class="poster__info-desc">Тематических зала</p>
+                    </div>
+                    <div class="poster__info-element">
+                        <p class="poster__info-features poster__info-features_field_text">New</p>
+                        <p class="poster__info-desc">Новейшая аппаратура</p>
+                    </div>
+                </div>
+
+                <a class="poster__link" href="#booking-id">Забронировать</a>
+
+                <a class="poster__down" href="#service-id">
+                    <svg width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="48.5" cy="48.5" r="48" stroke="white"/>
+                        <rect x="34.4253" y="43.9162" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4253 43.9162)" fill="white"/>
+                        <rect x="48.5806" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5806 58.0737)" fill="white"/>
+                    </svg>
+                </a>
+                        
+        </div>
             </div>
         </section>
     </main>
