--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Компьютерный клуб GameOver</title>
     <link rel="stylesheet" href="css/css.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container header__inner">
@@ -51,15 +53,31 @@
 
                 <a class="poster__down" href="#service-id">
                     <svg width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="48.5" cy="48.5" r="48" stroke="white"/>
-                        <rect x="34.4253" y="43.9162" width="1.82001" height="20.0201" transform="rotate(-44.9975 34.4253 43.9162)" fill="white"/>
-                        <rect x="48.5806" y="58.0737" width="1.82001" height="20.0201" transform="rotate(-134.997 48.5806 58.0737)" fill="white"/>
+                        <circle cx="48.5" cy="48.5" r="48" stroke="white" />
+                        <rect x="34.4253" y="43.9162" width="1.82001" height="20.0201"
+                            transform="rotate(-44.9975 34.4253 43.9162)" fill="white" />
+                        <rect x="48.5806" y="58.0737" width="1.82001" height="20.0201"
+                            transform="rotate(-134.997 48.5806 58.0737)" fill="white" />
                     </svg>
                 </a>
-                        
-        </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="content" id="service-id">
+            <div class="container service">
+                <h2 class="headline">У нас есть все для классного<br>отдыха с друзьями!</h2>
+                <ul class="service__list">
+                    <li class="service__item service__item_decor-vr"><p class="service__name">VR очки</p></li>
+                    <li class="service__item service__item_decor-audio"><p class="service__name">Аудио-система 5.1<br> с отличным звуком</p></li>
+                    <li class="service__item service__item_decor-karaoke"><p class="service__name">Караоке (4 микрофона)</p></li>
+                    <li class="service__item service__item_decor-games"><p class="service__name">Настольные игры</p></li>
+                    <li class="service__item service__item_decor-cinema"><p class="service__name">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p></li>
+                    <li class="service__item service__item_decor-ps"><p class="service__name">РlаyStаtiоn 5</p></li>
+                </ul>
             </div>
         </section>
     </main>
 </body>
+
 </html>
