--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
                 </ul>
             </div>
         </section>
+
+        <section  class="content" id="room-id">
+            <div class="container room">
+                <h2 class="headline">Наши залы</h2>
+                <ul class="room__list">
+                    <li class="room__item room__item_decor-vibes"><a class="room__link" href="vibes.html">80's vibes</a></li>
+                    <li class="room__item room__item_decor-wars"><a class="room__link" href="starwars.html">Star wars</a></li>
+                    <li class="room__item room__item_decor-west"><a class="room__link" href="wildwest.html">Wild west</a></li>
+                    <li class="room__item room__item_decor-neon"><a class="room__link" href="neon.html">Neon style</a></li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 
