--- a/index.html
+++ b/index.html
@@ -82,11 +82,36 @@
             <div class="container room">
                 <h2 class="headline">Наши залы</h2>
                 <ul class="room__list">
-                    <li class="room__item room__item_decor-vibes"><a class="room__link" href="vibes.html">80's vibes</a></li>
-                    <li class="room__item room__item_decor-wars"><a class="room__link" href="starwars.html">Star wars</a></li>
-                    <li class="room__item room__item_decor-west"><a class="room__link" href="wildwest.html">Wild west</a></li>
-                    <li class="room__item room__item_decor-neon"><a class="room__link" href="neon.html">Neon style</a></li>
+                    <li class="room__item room__item_decor-vibes"><a class="room__link" href="blocks/room/vibes.html">80's vibes</a></li>
+                    <li class="room__item room__item_decor-wars"><a class="room__link" href="blocks/room/starwars.html">Star wars</a></li>
+                    <li class="room__item room__item_decor-west"><a class="room__link" href="blocks/room/wildwest.html">Wild west</a></li>
+                    <li class="room__item room__item_decor-neon"><a class="room__link" href="blocks/room/neon.html">Neon style</a></li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="content" id="about-id">
+            <div class="container about">
+                <h2 class="headline">О нас</h2>
+                <div class="about__wrapper">
+                    <img class="about__img" src="blocks/about/img/about_img.jpg" height="596" alt="Лучшие развлечения только у нас">
+                    <div class="about__text-block">
+                        <p class="about__text">Для наших гостей мы создали концептуально новое игровое пространство
+                            виртуальной реальности в центральной части города.</p>
+                        <p class="about__text">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и
+                            радовать Вас топовыми игровыми разработками со всего мира.</p>
+                    </div>
+                    <blockquote class="quote">
+                        <p class="quote__text">GAME OVER —
+                            это место незабываемых впечатлений</p>
+                        <figure class="quote__author">
+                            <img class="quote__author-img" src="blocks/about/img/author_abakshin.jpg" 
+                                alt="Аркадий Абакшин - создатель GAME OVER">
+                            <figcaption class="quote__author-info">Аркадий Абакшин, создатель игровой территории GAME OVER
+                            </figcaption>
+                        </figure>
+                    </blockquote>
+                </div>
             </div>
         </section>
     </main>
