--- a/index.html
+++ b/index.html
@@ -114,6 +114,41 @@
                 </div>
             </div>
         </section>
+
+        <section class="content" id="feedback-id">
+            <div class="container feedback">
+                <h2 class="headline">Отзывы посетителей</h2>
+                <ul class="feedback__list">
+                    <li class="feedback__item">
+                        <figure class="feedback__figure">
+                            <div class="feedback__image-wrapper">
+                                <img class="feedback__image" src="blocks/feedback/img/user01.jpg" alt="Посетитель Макс Самойлов" height="280">
+                            </div>
+                            <figcaption class="feedback__name">Макс Самойлов</figcaption>
+                        </figure>
+                        <p class="feedback__text">Отмечали здесь день роджения с компанией друзей, все было очень круто. VR очки это просто бомба, никогда еще я не был в таком полном игровом погружении. Сервис на высоте!</p>
+                    </li>
+                    <li class="feedback__item">
+                        <figure class="feedback__figure">
+                            <div class="feedback__image-wrapper">
+                                <img class="feedback__image" src="blocks/feedback/img/user02.jpg" alt="Посетитель Оксана Григорьева" height="280">
+                            </div>
+                            <figcaption class="feedback__name">Оксана Григорьева</figcaption>
+                        </figure>
+                        <p class="feedback__text">Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный получился корпоратив! У нас в городе больше нет подобных заведений</p>
+                    </li>
+                    <li class="feedback__item">
+                        <figure class="feedback__figure">
+                            <div class="feedback__image-wrapper">
+                                <img class="feedback__image" src="blocks/feedback/img/user03.jpg" alt="Посетитель Никита Ященко" height="280">
+                            </div>
+                            <figcaption class="feedback__name">Никита Ященко</figcaption>
+                        </figure>
+                        <p class="feedback__text">Немного подвисала игры в VR очках, а так все норм. Крутое оформление комнаты в стиле звездных войн, попал в атмосферу космоса</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 
