--- a/index.html
+++ b/index.html
@@ -149,6 +149,59 @@
                 </ul>
             </div>
         </section>
+
+        <section class="content" id="faq-id">
+            <div class="container faq">               
+                <h2 class="headline">Частые вопросы</h2>
+                    <ul class="faq__list">
+                        <li class="faq__item">
+                            <a href="#faq-id" class="faq__link">Можно ли забронировать комнату онлайн?
+                                <svg class="faq__icon" fill="none" viewBox="0 0 46 46" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m22.831 14h0.678v20h-0.678v-20z" fill="currentColor"/>
+                                    <path d="m13 24.17v-0.678h20v0.678h-20z" fill="currentColor"/>
+                                    <circle cx="23" cy="23" r="22" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </a>
+                        </li> 
+                        <li class="faq__item">
+                            <a href="#faq-id" class="faq__link">Могут ли мне вернуть деньги за бронь?
+                                <svg class="faq__icon" fill="none" viewBox="0 0 46 46" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m22.831 14h0.678v20h-0.678v-20z" fill="currentColor"/>
+                                    <path d="m13 24.17v-0.678h20v0.678h-20z" fill="currentColor"/>
+                                    <circle cx="23" cy="23" r="22" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="faq__item">
+                            <a href="#faq-id" class="faq__link">Какая комната самая популярная?
+                                <svg class="faq__icon" fill="none" viewBox="0 0 46 46" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m22.831 14h0.678v20h-0.678v-20z" fill="currentColor"/>
+                                    <path d="m13 24.17v-0.678h20v0.678h-20z" fill="currentColor"/>
+                                    <circle cx="23" cy="23" r="22" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </a>                        
+                        </li>
+                        <li class="faq__item">
+                            <a href="#faq-id" class="faq__link">Как получить VIP карту?
+                                <svg class="faq__icon" fill="none" viewBox="0 0 46 46" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m22.831 14h0.678v20h-0.678v-20z" fill="currentColor"/>
+                                    <path d="m13 24.17v-0.678h20v0.678h-20z" fill="currentColor"/>
+                                    <circle cx="23" cy="23" r="22" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="faq__item">
+                            <a href="#faq-id" class="faq__link">Какая комната самая популярная?
+                                <svg class="faq__icon" fill="none" viewBox="0 0 46 46" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m22.831 14h0.678v20h-0.678v-20z" fill="currentColor"/>
+                                    <path d="m13 24.17v-0.678h20v0.678h-20z" fill="currentColor"/>
+                                    <circle cx="23" cy="23" r="22" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>               
+            </div>
+        </section>
     </main>
 </body>
 
