--- a/index.html
+++ b/index.html
@@ -90,6 +90,102 @@
             </div>
         </section>
 
+        <section class="content" id="booking-id">
+            <div class="booking">
+                <div class="container">
+                    <h2 class="headline" id="booking-id">Забронировать зал просто</h2>
+                    <form class="add-booking" action="https://jsonplaceholder.typicode.com/posts" method="POST" name="bookRoom">
+                        <fieldset class="add-booking__fieldset add-booking__fieldset_choice_room">
+                            <legend class="add-booking__title-block">Выбери зал</legend>
+                        <label class="add-booking__label-room" for="vibes" tabindex="0">
+                            <input class="visually-hidden" type="radio" name="room" id="vibes" value="vibes">
+                            <span class="add-booking__checkbox-room">80's vibes</span>
+                        </label>
+                        <label class="add-booking__label-room" for="starWars">
+                            <input class="visually-hidden" type="radio" name="room" id="starWars" value="starWars">
+                            <span class="add-booking__checkbox-room">Star wars</span>
+                        </label>
+                        <label class="add-booking__label-room" for="wildWest">
+                            <input class="visually-hidden" type="radio" name="room" id="wildWest" value="wildWest">
+                            <span class="add-booking__checkbox-room">Wild west</span>
+                        </label>
+                        <label class="add-booking__label-room" for="neonStyle">
+                            <input class="visually-hidden" type="radio" name="room" id="neonStyle" value="neonStyle">
+                            <span class="add-booking__checkbox-room">Neon style</span>
+                        </label>
+                        </fieldset>
+
+                        <div class="add-booking__container">
+                        <fieldset class="add-booking__fieldset add-booking__fieldset_choice_services">
+                            <legend class="add-booking__title-block">Собери набор развлечений</legend>
+                            <fieldset class="add-booking__set">
+                                <legend class="add-booking__title add-booking__title_small-margin">Приставка:</legend>
+                                <label class="add-booking__label"><input class="add-booking__input" type="radio" name="console" value="playStation">PlayStation</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="radio" name="console" value="segaMegaDrive">Sega Mega Drive</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="radio" name="console" value="xBoxOneS">X-box One S</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="radio" name="console" value="dendy">Dendy</label>
+                            </fieldset>
+                            <fieldset class="add-booking__set">
+                                <legend class="add-booking__title add-booking__title_small-margin">Настольные игры:</legend>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="table_games" value="jenga">Jenga</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="table_games" value="monopoly">Monopoly</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="table_games" value="munchkin">Манчкин</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="table_games" value="alias">Alias</label>
+                            </fieldset>
+                            <fieldset class="add-booking__set">
+                                <legend class="add-booking__title add-booking__title_small-margin">Дополнительно:</legend>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="extra" value="karaoke">Караоке</label>
+                                <label class="add-booking__label"><input class="add-booking__input" type="checkbox" name="extra" value="vr">VR</label>
+                            </fieldset>
+                        </fieldset>
+
+                        <fieldset class="add-booking__fieldset add-booking__fieldset_choice_date">
+                                <legend class="add-booking__title-block">Выбери дату и время</legend>
+                                <div class="add-booking__date-block">
+                                    <div class="add-booking__date-block_type_input">
+                                <input class="add-booking__input-text add-booking__input-text_width_small" type="date" name="date" id="date" required>   
+                                <input class="add-booking__input-text add-booking__input-text_width_small" type="time" name="time" id="time" required>
+                                    </div>
+                                    <div class="add-booking__date-block_type_select">
+                                <select class="add-booking__input-text add-booking__select" name="person" id="person" required>
+                                    <option value="">Сколько человек</option>
+                                    <option>1-3</option>
+                                    <option>4-6</option>
+                                    <option>7-9</option>
+                                    <option>10 и более</option>
+                                </select>
+                                </div>
+                                </div>
+
+                                <div class="add-booking__name-block">
+                                    <label class="add-booking__label-text" for="name">Имя</label>
+                                    <input class="add-booking__input-text add-booking__input-text_width_medium" type="text" name="name" id="name" required>
+                                    <label class="add-booking__label-text" for="surname">Фамилия</label>
+                                    <input class="add-booking__input-text add-booking__input-text_width_medium" type="text" name="surname" id="surname" required>
+                                </div>
+ 
+
+                                <div class="add-booking__contact-block">
+                                    <label class="add-booking__label-text" for="phone">Телефон</label>
+                                    <input class="add-booking__input-text add-booking__input-text_width_large" type="tel" name="phone" id="phone"
+                                    title="Введите номер в числовом формате (без плюсов, тире и скобок)" required
+                                    pattern="^[ 0-9]+$">
+                                    <label class="add-booking__label-text" for="email">E-mail</label>
+                                    <input class="add-booking__input-text add-booking__input-text_width_large" type="email" name="email" id="email"
+                                    title="Введите e-mail в формате example@example.com" required
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                                </div>
+                        </fieldset>
+                        
+                        <button class="add-booking__button" type="submit">Забронировать</button>
+                        </div>
+                    </form>
+             </div>
+            </div>
+        </section>
+
+        
+
         <section class="content" id="about-id">
             <div class="container about">
                 <h2 class="headline">О нас</h2>
