--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 <body>
     <header class="header">
         <div class="container header__inner">
-            <div class="mobile-nav">
-                <span></span>
-            </div>
+        
+            <svg class="mobile-nav__icon" xmlns="http://www.w3.org/2000/svg" width="54" height="29" viewBox="0 0 54 29" fill="none">
+                <rect width="54" height="5" rx="2" fill="#6C0287"/>
+                <rect y="12" width="54" height="5" rx="2" fill="#6C0287"/>
+                <rect y="24" width="31" height="5" rx="2" fill="#6C0287"/>
+            </svg>
 
             <a href="index.html">
                 <img class="logo" src="blocks/header/img/logo.svg" alt="Логотип нашего компьютерного клуба">
             </a>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link" href="#">Залы</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">О нас</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Бронь</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Отзывы</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#room-id">Залы</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#about-id">О нас</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#booking-id">Бронь</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#feedback-id">Отзывы</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#contact-id">Контакты</a></li>
                 </ul>
             </nav>
             <button class="header__callback">Заказать звонок</button>
