--- a/blocks/room/vibes.html
+++ b/blocks/room/vibes.html
@@ -64,7 +64,7 @@
             <div class="container property">
                 <h2 class="headline">Что есть в комнате?</h2>
                 <div class="property__wrapper">
-                    <img class="property__image" src="../../blocks/room/img/property.jpg" alt="В наших комнатах имеется все необходимое" height="424">
+                    <img class="property__image" src="../../blocks/room/img/property_vibes.jpg" alt="В наших комнатах имеется все необходимое" height="424">
                     <div class="property__text-wrapper">
                         <p class="property__text">В комнате 80-х есть игровые автоматы, магнитофоны, виниловые пластинки и мини кинотеатр.</p>
                         <p class="property__text">Также вы можете выбрать игровую приставку, настольные игры, VR и караоке.</p>
@@ -77,9 +77,9 @@
             <div class="container room">
                 <h2 class="headline">Другие комнаты</h2>
                 <ul class="room__list room__list__on-page">
-                    <li class="room__item room__item_on-page room__item_decor-wars"><a class="room__link room__link-on-page" href="blocks/room/starwars.html">Star wars</a></li>
-                    <li class="room__item room__item_on-page room__item_decor-west"><a class="room__link room__link-on-page" href="blocks/room/wildwest.html">Wild west</a></li>
-                    <li class="room__item room__item_on-page room__item_decor-neon"><a class="room__link room__link-on-page" href="blocks/room/neon.html">Neon style</a></li>
+                    <li class="room__item room__item_on-page room__item_decor-west"><a class="room__link room__link-on-page" href="wildwest.html">Wild west</a></li>
+                    <li class="room__item room__item_on-page room__item_decor-wars"><a class="room__link room__link-on-page" href="starwars.html">Star wars</a></li>
+                    <li class="room__item room__item_on-page room__item_decor-neon"><a class="room__link room__link-on-page" href="neon.html">Neon style</a></li>
                 </ul>
             </div>
         </section>        
