--- a/blocks/room/starwars.html
+++ b/blocks/room/starwars.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../../assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <title>Комната Star Wars - Компьютерный клуб GameOver</title>
     <link rel="stylesheet" href="../../css/css.css">
 </head>
@@ -19,7 +24,7 @@
                 <rect y="24" width="31" height="5" rx="2" fill="#6C0287"/>
             </svg>
 
-            <a href="index.html">
+            <a href="../../index.html">
                 <img class="logo" src="../../blocks/header/img/logo.svg" alt="Логотип нашего компьютерного клуба">
             </a>
             <nav class="nav">
@@ -46,7 +51,7 @@
                 </div>
             </div>
 
-        <section class="content">
+        <section class="content content-poster">
             <div class="room-poster room-poster__decor-starwars">
                 <div class="container"> 
                     <h1 class="room-poster__title">Star wars</h1>
@@ -60,7 +65,7 @@
             </div>
         </section>
        
-        <section class="content">
+        <section class="content content-poster">
             <div class="container property">
                 <h2 class="headline">Что есть в комнате?</h2>
                 <div class="property__wrapper">
