--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <title>Компьютерный клуб GameOver</title>
     <link rel="stylesheet" href="css/css.css">
 </head>
@@ -13,7 +18,7 @@
     <header class="header">
         <div class="container header__inner">
         
-            <svg class="mobile-nav__icon" xmlns="http://www.w3.org/2000/svg" width="54" height="29" viewBox="0 0 54 29" fill="none">
+            <svg class="mobile-icon" xmlns="http://www.w3.org/2000/svg" width="54" height="29" viewBox="0 0 54 29" fill="none">
                 <rect width="54" height="5" rx="2" fill="#6C0287"/>
                 <rect y="12" width="54" height="5" rx="2" fill="#6C0287"/>
                 <rect y="24" width="31" height="5" rx="2" fill="#6C0287"/>
@@ -64,7 +69,6 @@
                     </svg>
                 </a>
             </div>
-            </div>
         </section>
 
         <section class="content" id="service-id">
@@ -93,7 +97,7 @@
             </div>
         </section>
 
-        <section class="content" id="booking-id">
+        <section class="content">
             <div class="booking">
                 <div class="container">
                     <h2 class="headline" id="booking-id">Забронировать зал просто</h2>
