--- a/blocks/room/vibes.html
+++ b/blocks/room/vibes.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container header__inner">
         
-            <svg class="mobile-nav__icon" xmlns="http://www.w3.org/2000/svg" width="54" height="29" viewBox="0 0 54 29" fill="none">
+            <svg class="mobile-icon" xmlns="http://www.w3.org/2000/svg" width="54" height="29" viewBox="0 0 54 29" fill="none">
                 <rect width="54" height="5" rx="2" fill="#6C0287"/>
                 <rect y="12" width="54" height="5" rx="2" fill="#6C0287"/>
                 <rect y="24" width="31" height="5" rx="2" fill="#6C0287"/>
